# Web-Server-on-esp32-with-visualisation-imu-sensors

./: .gitmodules  README.md  sdkconfig
main/: CMakeLists.txt  app_main.cpp  component.mk  mpu6050_source.cpp  mpu6050_source.hpp  telemetry.cpp  telemetry.hpp  web_server.cpp  web_server.hpp  ws_echo_server.cpp  ws_test.html
